# optrace

./: .gitignore  README.md  README.zh.md  THIRD_PARTY_LICENSES.md  package.json  pnpm-lock.yaml  vite.config.ts
licenses/: frontend-licenses.json  frontend-licenses.md  rust-licenses.json  rust-licenses.tsv
public/: cfg-svg-benchmark.html
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  coverage.txt  tauri.conf.json
src-tauri/capabilities/: debug.json  default.json
src-tauri/src/: analysis.rs  lib.rs  optrace_journal.rs  scripts_fs.rs
src-tauri/src/commands/: analysis_cmd.rs  cfg.rs  data.rs  debug.rs  fork.rs  foundry.rs  mod.rs  session.rs  shadow.rs  symbolic.rs
src-tauri/src/op_trace/: balance_diff.rs  cache.rs  cfg_builder.rs  debug_session.rs  evm_runner.rs  foundry_calltree.rs  foundry_dump.rs  frame_manager.rs  inspector.rs  message_encoder.rs  mod.rs  prestate.rs  scan.rs  shadow.rs  spec_schedule.rs  types.rs
src-tauri/src/op_trace/fork/: fork_inspector.rs  fork_runner.rs  mod.rs
src-tauri/src/op_trace/symbolic/: engine.rs  expr.rs  mod.rs  slicer.rs  solver.rs
src-tauri/src/op_trace/tracer/: bytecode_tracer.rs  gas_tracer.rs  log_tracer.rs  memory_tracer.rs  mod.rs  storage_tracer.rs
src-tauri/tests/: balance_diff_tests.rs  cache_tests.rs  debug_session_tests.rs  evm_runner_tests.rs  fork_patch_tests.rs  scripts_fs_tests.rs  session_tests.rs  shadow_state_tests.rs  symbolic_expr_tests.rs  types_tests.rs
src/components/: AnalysisDrawer.tsx  BalanceChangesViewer.tsx  BlockInfo.tsx  BookmarksDrawer.tsx  CallTreeViewer.tsx  CfgWindow.svg.tsx  CfgWindow.tsx  CommandPaletteDialog.tsx  CondScanDrawer.tsx  DataFlowModal.tsx  DataFlowTree.tsx  DebugPanel.tsx  DebugToolbar.tsx  DrawerHost.tsx  GlobalLogDrawer.tsx  HintOverlay.tsx  KeyboardShortcutsHelpDialog.tsx  MainInterface.tsx  MemoryViewer.tsx  MultiTxListEditor.tsx  NotesDrawer.tsx  OpcodeViewer.tsx  OrderedStepJumpControls.tsx  PanelHintOverlay.tsx  PanelSelector.tsx  ProgressBar.tsx  ScanHitsList.tsx  ShadowDiagnosticsDialog.tsx  SlotAnnotationDrawer.tsx  SourceViewer.tsx  StackViewer.tsx  StateChangeViewer.tsx  StateDiffViewer.tsx  StorageViewer.tsx  SymbolicSolveDrawer.tsx  TabBar.tsx  TxInfo.tsx  UtilitiesDrawer.tsx  VirtualHighlightList.tsx
src/components/floating-panel/: FloatingPanelBodyContext.tsx  FloatingPanelContext.tsx  FloatingPanelFrame.tsx  floatingPanelStorage.ts  index.ts
src/components/ui/: bottom-sheet-shell.tsx  command.tsx  dialog.tsx  panel-context-menu.tsx  popover.tsx  select.tsx  slider.tsx  sonner.tsx  spinner.tsx
src/hooks/: useActiveFrameProjection.ts  useBreakpoints.ts  useCallTreeAddressLabels.ts  useCallTreeFilters.ts  useCondNodeEditor.ts  useConditionScan.ts  useDebugCommandBindings.ts  useDebugPlayback.ts  useDebugRuntimeRefs.ts  useDebugUiActions.ts  useDrawerActions.ts  useFourbyteResolver.ts  useKeyboardShortcuts.ts  useNavigation.ts
src/lib/: addressLabel.ts  analysisScripts.ts  appConfig.ts  cfgBridge.ts  cfgDot.ts  cfgLayoutWorker.ts  cfgLayoutWorkerPlain.ts  commandPalette.ts  commands.ts  contractSlots.ts  debugActions.ts  frameProjection.ts  frameScope.ts  keyboardScroll.ts  messageHandlers.ts  monacoSetup.ts  opcodes.ts  patternMatcher.ts  pauseConditions.ts  shadowDiagnostics.ts  shortcuts.ts  sourcemap.ts  stepBatchWorker.ts  stepPlayer.ts  symbolic.ts  tauriStore.ts  txFetcher.ts  types.ts  windowActions.ts  windowMode.ts
src/lib/analysis-scripts/: call-summary.js  (+5 more)
src/store/: debugStore.ts
