[package]
name = "optrace"
version = "0.1.5"
description = "A Tauri-based EVM execution tracer and debugger"
authors = ["TangHaoSuan"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "optrace_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
revm = { version = "36.0.0", features = ["alloydb", "std", "serde"] }
anyhow = "1.0.100"
alloy-provider = "1.7.3"
alloy-sol-types = "1.5.7"
alloy-rpc-types-eth = "1.7.3"
revm-interpreter = "34.0.0"
bincode = "1.3"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-store = "2"
rayon = "1"
rquickjs = { version = "0.6", features = ["bindgen"] }

# ── dev 模式优化：让 EVM 热路径（step / step_end）有基本性能，同时保持快速增量编译 ──
# macOS 不存在 Windows 的跨 codegen-unit .llvm.HASH 链接冲突问题，
# 无需 codegen-units = 1，保持默认值（256）让编译器充分并行。
[profile.dev]
opt-level = 1          # O1：明显快于 O2/O3，EVM 性能仍可接受，增量编译速度大幅提升

[profile.dev.package."*"]
opt-level = 3          # 所有依赖（revm / alloy 等）: O3 → 完整优化，只首次编译一次

