[package]
name = "optrace"
version = "0.1.9"
description = "A Tauri-based EVM execution tracer and debugger"
authors = ["TangHaoSuan"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "optrace_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
heimdall-decompiler = { git = "https://github.com/Jon-Becker/heimdall-rs", rev = "38071603146149cc571449cbe25570fc69e5373e" }
lazy_static = "1.4"
revm = { version = "36.0.0", features = ["alloydb", "std", "serde"] }
anyhow = "1.0.100"
alloy-provider = "1.7.3"
alloy-sol-types = "1.5.7"
alloy-rpc-types-eth = "1.7.3"
revm-interpreter = "34.0.0"
bincode = "1.3"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
rayon = "1"
rquickjs = { version = "0.6", features = ["bindgen"] }
sha2 = "0.10"
hex = "0.4"
memmap2 = "0.9"
sonic-rs = "0.3"
rmp-serde = "1.3"
memchr = "2"
mimalloc = { version = "0.1", default-features = false }

[dev-dependencies]
revm = "36.0.0"

[profile.release]
# Shrink the final `.app` / Mach-O (Tauri embeds `dist` + native code).
opt-level = "z"
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
codegen-units = 1   
opt-level = 1          
[profile.dev.package."*"]
opt-level = 3         
